--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    buildToolsVersion "27.0.3"
     compileSdkVersion 27
     defaultConfig {
         applicationId "kr.ac.kw.coms.globealbum"
