--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,26 @@ captures/
 
 # IntelliJ
 *.iml
+
+# User-specific configurations
+.idea/libraries/
 .idea/workspace.xml
 .idea/tasks.xml
-.idea/gradle.xml
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
 .idea/dictionaries
-.idea/libraries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+.idea/datasources.xml
+.idea/dataSources.ids
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
