--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ captures/
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
+.idea/caches/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
