--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,8 @@ dependencies {
 
     compile 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
     compile 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
+
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.android.support:cardview-v7:27.+'
+    compile 'com.jsibbold:zoomage:1.1.0'
 }
