--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
     implementation 'org.osmdroid:osmdroid-android:6.0.1'
     implementation 'org.mapsforge:mapsforge-map-android:0.9.1'
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
@@ -35,10 +35,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
-    compile 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
+    implementation 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
+    implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
 
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    compile 'com.android.support:cardview-v7:27.+'
-    compile 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.jsibbold:zoomage:1.1.0'
 }
