--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlbumActivity" />
         <activity
             android:name=".MapActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -35,7 +34,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryMainActivity"></activity>
+        <activity android:name=".GalleryMainActivity" />
+        <activity android:name=".activity_gallery"></activity>
     </application>
 
 </manifest>
