--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,5 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
     implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
 
-    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
