coordinate from selected image file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryMainActivity" />
-        <activity android:name=".activity_gallery"></activity>
+        <activity android:name=".GalleryActivity" />
     </application>
 
 </manifest>
