--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,9 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
