--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -35,13 +36,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".album.GalleryActivity" />
-        <activity android:name=".MarkerPopupMenu" />
-        <activity android:name=".album.activity_Navigator" />
+        <activity android:name=".album.activity_Navigator"/>
         <activity
             android:name=".album.GalleryDetail"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_gallery_detail"
             android:theme="@style/FullscreenTheme"></activity>
+        <activity android:name=".album.ExampleDiary"/>
     </application>
 
 </manifest>
