--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:label="@string/title_activity_gallery_detail"
             android:theme="@style/FullscreenTheme"></activity>
         <activity android:name=".album.ExampleDiary"/>
+        <activity android:name=".provider.Login"/>
     </application>
 
 </manifest>
