--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,12 +36,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".album.GalleryActivity" />
-        <activity android:name=".album.activity_Navigator"/>
+        <activity android:name=".album.activity_Navigator" />
         <activity
             android:name=".album.GalleryDetail"
             android:label="@string/title_activity_gallery_detail"
-            android:theme="@style/FullscreenTheme"></activity>
-        <activity android:name=".album.ExampleDiary"/>
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".album.ExampleDiary" />
+        <activity android:name=".diary.Diary_main"></activity>
     </application>
 
 </manifest>
