--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
+    implementation 'org.osmdroid:osmdroid-mapsforge:6.0.1@aar'
+    implementation 'org.mapsforge:mapsforge-map-android:0.9.1'
+    implementation 'org.mapsforge:mapsforge-map:0.9.1'
+    implementation 'org.mapsforge:mapsforge-themes:0.8.0'
     implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
