--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'net.coobird:thumbnailator:0.4.8'
 }
 
 kotlin {
