--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,12 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-gson:1.13.0' //for Gson support
     // JSON
     implementation 'com.beust:klaxon:3.0.1'
-    // JUnit 4 test framework
+
+    // JUnit 5 -> 4 test framework
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.2.0'
     testCompileOnly 'org.junit.platform:junit-platform-runner:1.2.0'
+    // For java junit4 compatible test discovery
+    testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
     // Spek, the kotlin test framework, with kotlin version replacement.
     testCompileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompileOnly('org.jetbrains.spek:spek-api:1.1.5') {
