--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    //glide library for imageview
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
     // Kotlin client dependencies
 
     // http client
