--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,10 @@
             android:label="@string/title_activity_gallery_detail"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".album.ExampleDiary" />
-        <activity android:name=".diary.Diary_main" />
+        <activity android:name=".diary.Diary_Mine_main" />
         <activity android:name=".provider.Login" />
-        <activity android:name=".diary.Diary_mapNPictures"></activity>
+        <activity android:name=".diary.Diary_mapNPictures" />
+        <activity android:name=".diary.Diary_Other_main"></activity>
     </application>
 
 </manifest>
