--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,22 +39,28 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // kotlin client custom dependencies
+    implementation files('libs/ktor-client-bundle-0.9.4-SNAPSHOT-all.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-io-jvm:0.1.0-alpha-1'
+
+    // android UI libraries
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'com.google.android:flexbox:1.0.0'
     implementation 'com.android.support:support-v4:27.1.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
-
+    // Map service libraries
     implementation 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
 //    implementation 'org.osmdroid:osmdroid-mapsforge:6.0.1@aar'
     implementation(name: 'osmdroid-mapsforge-6.0.2-SNAPSHOT-debug', ext: 'aar')
@@ -65,21 +71,18 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-    //glide library for imageview
+    // glide library for imageview
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     // Kotlin client dependencies
-
-    // http client
-    implementation 'io.ktor:ktor-client-core:0.9.3'
-    implementation 'io.ktor:ktor-client-apache:0.9.3'
-    implementation 'io.ktor:ktor-client-json:0.9.3'
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.14.0'
     implementation 'com.github.kittinunf.fuel:fuel-gson:1.13.0' //for Gson support
 
-    // JSON
+    // kotlin JSON
     implementation 'com.beust:klaxon:3.0.1'
+
+    // Test libraries
 
     // JUnit 5 -> 4 test framework
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.2.0'
@@ -97,6 +100,9 @@ dependencies {
     }
     // Assertion framework
     testImplementation 'org.amshove.kluent:kluent:1.38'
+    // Android test
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 kotlin {
