--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,14 @@ dependencies {
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.caverock:androidsvg:1.2.2-beta-1'
+    implementation 'com.caverock:androidsvg:1.3'
     implementation 'com.google.android:flexbox:1.0.0'
     implementation 'com.android.support:support-v4:27.1.1'
 
-    //
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
     // Map service libraries
-    implementation 'org.osmdroid:osmdroid-android:6.0.1'   //osmdroid map engine
+    implementation 'org.osmdroid:osmdroid-android:6.0.2'   //osmdroid map engine
 //    implementation 'org.osmdroid:osmdroid-mapsforge:6.0.1@aar'
     implementation(name: 'osmdroid-mapsforge-6.0.2-SNAPSHOT-debug', ext: 'aar')
     implementation 'org.mapsforge:mapsforge-map:0.9.1'
@@ -81,6 +79,9 @@ dependencies {
 
     // kotlin JSON
     implementation 'com.beust:klaxon:3.0.1'
+
+    // svg support
+    implementation 'com.caverock:androidsvg:1.3'
 
     // Test libraries
 
