--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,20 +32,22 @@ android {
 }
 
 repositories {
-    maven { url 'https://dl.bintray.com/kotlin/ktor' }
+    maven { url 'https://kotlin.bintray.com/kotlinx'}
+    maven { url 'https://kotlin.bintray.com/ktor' }
     flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // client module
+    implementation project(":landmarks-clientkt")
 
     // kotlin client custom dependencies
-    implementation files('libs/ktor-client-bundle-0.9.4-SNAPSHOT-all.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-io-jvm:0.1.0-alpha-1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-io-jvm:0.1.0-alpha-1'
 
     // android UI libraries
     implementation "org.jetbrains.anko:anko:$anko_version"
@@ -91,7 +93,6 @@ dependencies {
     // For java junit4 compatible test discovery
     testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
     // Spek, the kotlin test framework, with kotlin version replacement.
-    testCompileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompileOnly('org.jetbrains.spek:spek-api:1.1.5') {
         exclude group: 'org.jetbrains.kotlin'
     }
