--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.61'
-    ext.anko_version='0.10.5'
+    ext.anko_version = '0.10.5'
+    ext.ktor_version = '0.9.4-alpha-2'
     repositories {
         google()
         jcenter()
