--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = ext.properties.kotlin_version ?: '1.2.61'
+    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.2.61'
     repositories {
         jcenter()
     }
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     // Kotlin standard library
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-android:$ktor_version"
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
