--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     buildToolsVersion "27.0.3"
@@ -73,7 +74,8 @@ dependencies {
 
     // glide library for imageview
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
     // kotlin JSON
     implementation 'com.beust:klaxon:3.0.1'
