--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.2.61'
+    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.2.71'
+    ext.ktor_version ='0.9.5'
     repositories {
         jcenter()
     }
