--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.2.61'
     ext.anko_version = '0.10.5'
-    ext.ktor_version = '0.9.4-alpha-2'
+    ext.ktor_version = '0.9.5'
     repositories {
         google()
         jcenter()
