--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="kr.ac.kw.coms.globealbum">
+    package="kr.ac.kw.coms.globealbum">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- permission for osmdroid -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-            android:allowBackup="true"
-            android:fullBackupContent="false"
-            android:icon="@mipmap/ic_landmark"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_landmark_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:allowBackup="true"
+        android:fullBackupContent="false"
+        android:icon="@mipmap/ic_landmark"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_landmark_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-                android:name=".game.GameActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".game.GameActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".album.GalleryActivity" android:noHistory="true"/>
-        <activity android:name=".album.activity_Navigator"/>
         <activity
-                android:name=".album.GalleryDetail"
-                android:label="@string/title_activity_gallery_detail"
-                android:theme="@style/FullscreenTheme"/>
-        <activity android:name=".album.ExampleDiary"/>
-        <activity android:name=".diary.Diary_main"/>
+            android:name=".album.GalleryActivity"
+            android:noHistory="true" />
+        <activity android:name=".album.activity_Navigator" />
+        <activity
+            android:name=".album.GalleryDetail"
+            android:label="@string/title_activity_gallery_detail"
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".album.ExampleDiary" />
+        <activity android:name=".diary.Diary_main" />
         <activity android:name=".provider.LoginActivity" />
-        <activity android:name=".diary.Diary_mapNPictures"/>
-        <activity android:name=".diary.Diary_Edit"/>
-        <activity android:name=".diary.diary_new">
-        </activity>
+        <activity android:name=".diary.Diary_mapNPictures" />
+        <activity android:name=".diary.Diary_Edit" />
+        <activity android:name=".diary.diary_new" />
     </application>
 
 </manifest>
