--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     // kotlin client custom dependencies
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-io-jvm:0.1.0-alpha-1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2'
 
     // android UI libraries
     implementation "org.jetbrains.anko:anko:$anko_version"
