--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.61'
+    ext.coroutine_version = '0.30.2'
     ext.anko_version = '0.10.7'
     ext.ktor_version = '0.9.5'
     repositories {
