--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -20,19 +20,18 @@ jar {
 
 repositories {
     jcenter()
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://kotlin.bintray.com/ktor' }
-    maven { url 'https://kotlin.bintray.com/kotlinx'}
+    maven { url 'https://dl.bintray.com/kotlin/ktor/' }
+    maven { url 'https://dl.bintray.com/kotlin/kotlinx/'}
 }
 
 dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
-    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
-    implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
-    implementation "io.ktor:ktor-client-gson:$ktor_version"
+
+    implementation files('libs/ktor-client-okhttp-0.9.5-custom.jar')
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     // JSON
     implementation 'com.beust:klaxon:3.0.1'
